--- a/src/PaperFeed/appsettings.Development.json
+++ b/src/PaperFeed/appsettings.Development.json
@@ -7,7 +7,8 @@
     },
     "TelegramSettings": {
         "BotToken": "YOUR_TELEGRAM_BOT_TOKEN",
-        "ChannelId": "YOUR_TELEGRAM_CHAT_ID"
+        "ChannelId": "YOUR_TELEGRAM_CHAT_ID",
+        "LocalApiServerPort": 9929
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
