--- a/src/PaperFeed/appsettings.Production.json
+++ b/src/PaperFeed/appsettings.Production.json
@@ -7,7 +7,8 @@
     },
     "TelegramSettings": {
         "BotToken": "YOUR_TELEGRAM_BOT_TOKEN",
-        "ChannelId": "YOUR_TELEGRAM_CHAT_ID"
+        "ChannelId": "YOUR_TELEGRAM_CHAT_ID",
+        "LocalApiServerPort": 9929
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
@@ -17,6 +18,6 @@
         "IntervalInMinutes": 240
     },
     "ConnectionStrings": {
-        "Default": "Data Source=/var/lib/paperfeed/data.db;Cache=Shared;Mode=ReadWriteCreate;Journal Mode=WAL;Foreign Keys=True;"
+        "Default": "Data Source=/var/lib/paperfeed/data.db;Cache=Shared;Mode=ReadWriteCreate;Foreign Keys=True;"
     }
 }
