--- a/src/PaperFeed/appsettings.json
+++ b/src/PaperFeed/appsettings.json
@@ -8,7 +8,8 @@
     "TelegramSettings": {
         "BotToken": "YOUR_TELEGRAM_BOT_TOKEN",
         "ChannelId": "YOUR_TELEGRAM_CHAT_ID",
-        "LocalApiServerPort": 9929
+        "LocalApiServerPort": 9929,
+        "UseOfficialApi": false
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
