--- a/src/PaperFeed/appsettings.Development.json
+++ b/src/PaperFeed/appsettings.Development.json
@@ -7,9 +7,7 @@
     },
     "TelegramSettings": {
         "BotToken": "YOUR_TELEGRAM_BOT_TOKEN",
-        "ChannelId": "YOUR_TELEGRAM_CHAT_ID",
-        "LocalApiServerPort": 9929,
-        "UseOfficialApi": false
+        "ChannelId": "YOUR_TELEGRAM_CHAT_ID"
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
