--- a/src/PaperFeed/appsettings.Production.json
+++ b/src/PaperFeed/appsettings.Production.json
@@ -7,8 +7,7 @@
     },
     "TelegramSettings": {
         "BotToken": "YOUR_TELEGRAM_BOT_TOKEN",
-        "ChannelId": "YOUR_TELEGRAM_CHAT_ID",
-        "LocalApiServerPort": 9929
+        "ChannelId": "YOUR_TELEGRAM_CHAT_ID"
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
