Added filtering by tags, added wallpapers topic (how did i miss it?)

--- a/src/PaperFeed/appsettings.Development.json
+++ b/src/PaperFeed/appsettings.Development.json
@@ -11,7 +11,8 @@
     },
     "UnsplashSettings": {
         "AccessKey": "YOUR_UNSPLASH_ACCESS_KEY",
-        "BaseUrl": "https://api.unsplash.com/"
+        "BaseApiUrl": "https://api.unsplash.com/",
+        "BasePortalUrl": "https://unsplash.com/"
     },
     "BotSettings": {
         "IntervalInMinutes": 240
