--- a/src/PaperFeed.Infrastructure/PaperFeed.Infrastructure.csproj
+++ b/src/PaperFeed.Infrastructure/PaperFeed.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AngleSharp" Version="1.3.0" />
       <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
